--- a/login.html
+++ b/login.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
-<body align="center" style="background-color: rgb(34, 152, 167);">
-
-<div  style="margin-top: 200px; background-color: rgb(255, 255, 255); width: 500px; height: 500px; margin-left: 35%;" align="center">
+<body align="center" style="background-color: rgb(145, 56, 228);">
+<div  style="margin-top: 200px; background-color: rgb(255, 255, 255); width: 500px; height: 500px; margin-left: 35%; border-radius: 10%;" align="center">
 <h1 style="padding-top: 10%;">
 Log In
+<br>
+<hr>
 </h1>
 <h3>
+    <br>
 Enter your Faculty Initial
 </h3>
-<input id="uname" style="width: 200px;height: 25px;" type="text">
+<input id="uname" style="width: 200px;height: 25px;border-radius: 5%;" type="text">
 <h3>
     Enter your password
     </h3>
-    <input id="pass" style="width: 200px;height: 25px;" type="password">
-    <br><br>
-<input onclick="chk()" style="margin-left: 150px;" type="submit">
+    <input id="pass" style="width: 200px;height: 25px; border-radius: 5%;" type="password">
+    <br><br><br>
+<input onclick="chk()" style="margin-left: 140px; background-color: deepskyblue; height: 30px;width: 70px;" type="submit">
 </div>
 <script>
 function chk(){
@@ -36,9 +38,12 @@ if(s=="admin"){
         alert("Enter Correct Password");
     }
 }else{
+    if(s=="" && s2==""){
+        alert("Enter initial and paddword correctly");
+    }else{
     let a = document.getElementById("uname").value;
     localStorage.setItem("name",a);
-    window.location.href = "faculty.html";
+    window.location.href = "faculty.html";}
 }
 
 }
